<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_vertical"
	android:orientation="vertical"
    android:background="#333333" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/novo_gasto"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:drawableTop="@drawable/novo_gasto"
        android:onClick="selecionarOpcao"
        android:text="@string/novo_gasto"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nova_viagem"
        android:layout_marginLeft="50dp"
        android:clickable="true"
        android:drawableTop="@drawable/nova_viagem"
        android:onClick="selecionarOpcao"
        android:text="@string/nova_viagem"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minhas_viagens"
            android:layout_marginBottom="120dp"
            android:clickable="true"
            android:drawableTop="@drawable/minhas_viagens"
            android:onClick="selecionarOpcao"
            android:text="@string/minhas_viagens"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/configuracoes"
            android:layout_marginLeft="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/configuracoes"
            android:onClick="selecionarOpcao"
            android:text="@string/configuracoes"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            />

    </RelativeLayout>

</LinearLayout>